fix bug align center

--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,10 +1,9 @@
 .inline {
   display: flex;
   flex-direction: row;
-}
-
-.inline > div {
-  margin: 0 80px;
+  width: 50%;
+  justify-content: space-around;
+  margin: auto;
 }
 
 .center img {
